Changes for in Sidebar

--- a/index.html
+++ b/index.html
@@ -1,45 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SM GUI</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-</head>
-
-<body>
-
+  <body>
     <div class="container">
+      <div class="sidebar">
+        <div class="logo">
+          <h1>SM</h1>
+        </div>
+        <form class="example">
+          <input
+            type="text"
+            placeholder="What are you looking for?"
+            name="search"
+          />
+        </form>
+        <div class="menu-item">
+          <button class="menu-btn">Catalog</button>
+          <div class="submenu">
+            <a href="#">Simulator</a>
+            <a href="#">MO Management</a>
+            <a href="#">Notifications</a>
+            <a href="#">Notifications</a>
+            <a href="#">Life Cycle</a>
+            <a href="#">Service Management</a>
+            <a href="#">Price Code Management</a>
+            <a href="#">Plans Management/a>
+            <a href="#">Offer Plan</a>
+            <a href="#">Plan Debit Card</a>
+          </div>
+        </div>
 
+        <div class="menu-item">
+          <button class="menu-btn">Access Management</button>
+          <div class="submenu">
+            <a href="#">User Access Role</a>
+            <a href="#">User Access Profile</a>
+            <a href="#">Change Password of User</a>
+            <a href="#">User Access Control</a>
+          </div>
+        </div>
+
+        <div class="menu-item">
+          <button class="menu-btn">Configuration Management</button>
+          <div class="submenu">
+            <a href="#">Constants Configuration</a>
+            <a href="#">Master Configuration</a>
+          </div>
+        </div>
+
+      <div class="menu-item">
+          <button class="menu-btn">Customer Care Management</button>
+          <div class="submenu">
+            <a href="#">Customer Status</a>
+            <a href="#">Bulk Upload</a>
+          </div>
+        </div>
+
+      <div class="menu-item">
+          <button class="menu-btn">Service Provider Management</button>
+          <div class="submenu">
+            <a href="#">SP Profile</a>
+            <a href="#">SP Configuration</a>
+          </div>
+        </div>
+
+      <div class="menu-item">
+          <button class="menu-btn">Reporting Management</button>
+          <div class="submenu">
+            <a href="#">Report Configuration</a>
+            <a href="#">Report Generation</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="right-section">
         <div class="menubar">
-
+            <div class="navbar">
+               <p style="margin-right: 10px;color: aliceblue;">Guddu</p>
+            </div>
         </div>
-
-        <div class="sidebar">
-            <nav>
-                <ul>
-                    <form class="example">
-                        <input type="text" placeholder="What are you looking for?" name="search">
-                    </form>
-                    <li>Catalog</li>
-                    <li>Access Management</li>
-                    <li>Configuration Management</li>
-                    <li>Customer Care Management</li>
-                    <li>Service Provider Management</li>
-                    <li>Reporting Management</li>
-
-                </ul>
-            </nav>
-        </div>
-
         <div class="main">
-            <p1> Always Connected</p1>
+          <p>Always Connected</p>
         </div>
-
+        <div class="footer">
+          <p>Copyright</p>
+        </div>
+      </div>
     </div>
-
-</body>
-
+  </body>
 </html>
