logo add to SM and did styling

--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
 
   <body>
     <div class="container">
+
       <div class="sidebar">
+        
         <div class="logo">
-          <h1>SM</h1>
+          <img src="/images/logo.PNG" />
         </div>
+
         <form class="example">
           <input
             type="text"
@@ -80,18 +83,25 @@
       </div>
 
       <div class="right-section">
+
         <div class="menubar">
             <div class="navbar">
-               <p style="margin-right: 10px;color: aliceblue;">Guddu</p>
+               <p>Guddu</p>
             </div>
         </div>
+
         <div class="main">
-          <p>Always Connected</p>
+          <div class="main-content">
+            <p>Always Connected</p>
+          </div>
         </div>
+
         <div class="footer">
           <p>Copyright</p>
         </div>
+
       </div>
+    
     </div>
   </body>
 </html>
